Refactor: Añadir métodos para filtrar cajas por estado y sucursal en CajaService y CajaRepository